microk8s/pgweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb-service
spec:
  selector:
    app: pgweb
  ports:
    - port: 8080
      targetPort: 8080
