microk8s/pgweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgweb-ingress
  labels:
    name: pgweb-ingress
  annotations:
    kubernetes.io/ingress.class: 'public'
    cert-manager.io/cluster-issuer: 'lets-encrypt'
spec:
  ingressClassName: public
  tls:
    - hosts:
        - dbui.jdw.com
      secretName: pgweb-tls
  rules:
    - host: dbui.jdw.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: pgweb-adminer
                port:
                  number: 80
